syntax = "proto3";

package chord;

service Client {

  rpc insertKey(InsertKeyRequest) returns (InsertKeyReply) {}
  rpc getFingerTable(FingerTableListRequest) returns (FingerTableListReply) {}
  rpc addServer(AddServerRequest) returns (AddServerResponse) {}
  rpc getKeys(GetKeysRequest) returns (GetKeysResponse){}
  rpc getServerFromKey(ServerKeyRequest) returns (ServerKeyResponse) {}

}

service Node {
  rpc forwardKey(ForwardKeyRequest) returns (ForwardKeyReply) {}
  rpc getNodeData(NodeInfoRequest) returns (NodeInfoResponse) {}
  rpc heartBeat(HeartBeatToPredecessorRequest) returns (HeartBeatReplyFromSuccessor) {}
  rpc closestPrecedFinger(ClosestPFRequest) returns (ClosestPFReply) {}
  rpc updateSuccessorPredecessor(UpdateSPRequest) returns (UpdateSPResponse) {}
  rpc updateFingerTable(FingerTableUpdateRequest) returns (FingerTableUpdateResponse) {}
  rpc successorCall(SuccessorCallRequest) returns (SuccessorCallReply) {}
  rpc getPredecessorOfNode(PredecessorOfNodeRequest) returns (PredecessorOfNodeReqponse) {}
  rpc getSuccessorOfNode(SuccessorOfNodeRequest) returns (SuccessorOfNodeResponse) {}
  rpc checkKey(CheckKeyRequest) returns (CheckKeyReply) {}
}

message  CheckKeyRequest{
  int32 key=1;
}

message  CheckKeyReply{
  string node=1;
}

message  ServerKeyRequest{
  int32 key=1;
}

message ServerKeyResponse{
  string node=1;

}

message GetKeysRequest{

}

message GetKeysResponse{
  repeated int32 keys=1;
}

message SuccessorOfNodeRequest{

}

message SuccessorOfNodeResponse{
  string successor=1;
}

message  PredecessorOfNodeRequest{

}

message PredecessorOfNodeReqponse{

  string predecessor=1;
}

message SuccessorCallRequest{

  double id=1;
  string start=2;
}

message SuccessorCallReply{
  string successor=1;
}

message  FingerTableUpdateRequest{

  int32 iteration=2;
  int32 startNode=3;

}

message FingerTableUpdateResponse{
  int32 success=1;
}

message  UpdateSPRequest{
  string successor=1;
  string predecessor =2;
}

message UpdateSPResponse{
  int32 response =1; /* 0=success, 1= failure*/
}

message AddServerRequest{

  string port=1;
  string headNode=2;

}

message AddServerResponse{
  int32 reply =1; /* success if 1, failure if 0, node already exists the 2*/
}

message NodeInfoRequest{

}

message NodeInfoResponse{

  string predecessor=1;
  string successor =2;
  repeated FingerTable fTable =3;
  string myPort=4;

}

message ClosestPFRequest{
  double id=1;

}

message FingerTable{
  int32 nodeId=1;
  double start=2;
  double end=3;
  string nodePort=4;
}

message ClosestPFReply{

  string closestPrecedingFinger=1;

}



message FingerTableListRequest {
}

message FingerTableListReply {
  repeated FingerEntry entries = 1;
  string successor=2;
  string predecessor=3;
}
message InsertKeyRequest{
  int32 key = 1;
}

message InsertKeyReply{
  int32 stored=2; /* 0 success, 1 unsuccessful*/
  string node = 1;

}

message ForwardKeyRequest{
  int32 key=1;
}
message ForwardKeyReply{
  int32 reply =1; /* 1 if success 0 if error */
}

message  FingerEntry{
  string nodePort=1;
  int32 nodeId=2;
  double start=3;
  double end=4;
  int32 iteration=5;

}
message HeartBeatToPredecessorRequest {
  string hostPort = 3; /* the hostPort of the FileStore service */
}

message HeartBeatReplyFromSuccessor {
  int32 rc = 1;
  /* 0 success still the successor, 1 not a successor needs stabilizing, error - node absent, predecessor needs to take care of successor nodes */
}
